welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: type mismatch;
 found   : Int(1)
 required: String
		nbAdos = nbAdos + 1;
                                  ^countTeen:7: error: type mismatch;
 found   : Int(1)
 required: String
		nbAdos = nbAdos + 1;
                                  ^countTeen:10: error: type mismatch;
 found   : Int(1)
 required: String
		nbAdos = nbAdos + 1;
                                  ^countTeen:13: error: type mismatch;
 found   : Int(1)
 required: String
		nbAdos = nbAdos + 1;
                                  ^countTeen:13: error: type mismatch;
 found   : Unit
 required: Int
		nbAdos = nbAdos + 1;
                       ^countTeen:12: error: type mismatch;
 found   : Unit
 required: Int
	if (d <= 19 && d >= 13){
        ^